syntax = "proto3";
package order.client.message;
option go_package = "order-message/";


message OrderCreateReqGrpc{
  string productId = 1;
}




